src/pages/SubmissionsPage/SubmissionsPage.css
.lb-ctr {
	background-color: white;
	height: 100%;
	display: flex;
}

.lb-ctr > div {

}

.filter-ctr {
	background-color: grey;
	border-radius: 5%;
	padding: 1rem;
}

.filter-ctr > div{
	margin: 1.4rem 0rem;
}

.icon-ctr {
	display: flex;
	flex-wrap: wrap;
}

.filter-icon {
	height: 1.5rem;
	margin: .4rem;
}

.lb-main {
	background-color: tan;
	border-radius: 5%;
	width: 100%;
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-auto-flow: row;
	grid-gap: .8rem;
}

label {
	font-size: .9rem;
}

input {
	margin-right: .4rem;
}

.card {
	display: flex;
	justify-content: center;
	align-items: center;
	
}

.card-img {
	border-radius: 6%;
	/* maybe a better way to size the cards? */
	height: 15rem;
}

